<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EQ &amp; IQ Calculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="user_name">Username</string>
    <string name="u_name">Enter your username</string>
    <string name="password">Password</string>
    <string name="pwd">Enter password</string>
    <string name="login">Login</string>
    <string name="signup">Sign up here!</string>
    <string name="exit">Exit</string>

    <color name="bgcolor">#E4D5A3</color>
    <color name="txtcolor">#ffffff</color>

    <string name="reg_name">Name</string>
    <string name="reg_name_hint">Enter your name</string>
    <string name="reg_email">email</string>
    <string name="reg_email_hint">Enter your email</string>
    <string name="reg_password">Password</string>
    <string name="reg_pwd_hint">Enter password</string>
    <string name="reg_password2">Re-Password</string>
    <string name="reg_pwd2_hint">Enter password</string>
    <string name="reg_submit">Submit</string>
    <string name="reg_exit">Exit</string>
    <string name="home_intro">Introduction</string>
    <string name="home_quiz">Attempt Quiz</string>
    <string name="home_help">Help!</string>
    <string name="home_exit">Exit</string>
    <string name="quiz_qno">Question Number:</string>
    <string name="quiz_ques">Question:</string>
    <string name="quiz_prev">Prev</string>
    <string name="quiz_stop">Stop</string>
    <string name="quiz_next">Next</string>
    <string name="quiz_submit">Submit</string>
    <string name="quiz_ans1">Answer1</string>
    <string name="quiz_ans2">Answer2</string>
    <string name="quiz_ans3">Answer3</string>
    <string name="quiz_ans4">Answer4</string>
    <string name="quiz_ans5">Answer5</string>
    <string name="sumry_submit">Submit</string>
    <string name="sumry_return">Return To Attempt</string>
    <string name="sumry_title">Attempt Summary</string>
    <string name="result_title">Your Result is..</string>
    <string name="result_back_to_home">Back to Home</string>
    <string name="result_hint">Result</string>
    <string name="intro_eq">EQ Introduction</string>
    <string name="intro_iq">IQ Introduction</string>
    <string name="iq_text">
        IQ is a statistically derived number which indicates relative and comparative abilities that can be used to obtain academic skills and knowledge. You have hundreds of specific mental abilities. Some of these abilities can be measured accurately. Some of these measurements can be reliable predictors of an individual's academic achievements. Though an IQ test measures only a few of a human's mental abilities, these few abilities are targeted for measurement, because they are well known to positively correlate highly to many other human abilities. How high you score in one of these measured abilities, will strongly indicate how high you would be expected to score on the unmeasured abilities.

A higher IQ score is not a guarantee that an individual will achieve happiness, maintain sanity, or obtain spiritual growth.

A lower IQ score does not mean that an individual will be unsuccessful financially, emotionally, or morally.

There are "high IQ" individuals in all walks of life, and conversely, even traditionally exalted groups such as "physicians" can have individuals who would be measured as having only "normal" intelligence.

Average: 85 - 115 Above average: 115 - 125
Gifted Borderline Genius: 125 - 135
Highly gifted and appearing to be a Genius to most others: 135 - 145
Genius: 145 - 165
High genius: 166 - 180
Highest genius: 181 - 200
Beyond being measurable genius: Over 200
    </string>
    
    
   
    
    
    
    
    
    
    
    
    <string name="eq_text">EQ is geneerally how the person understands emotions or situations and act appropriately.
How an individual face a situation with understandning it and acting properly.
An Emotional Quotient can be strengthen and improved by emplementing EQ assignments.
There are three models which are developed for calculating the EQ.
1.ability model which focusses on individuals ability to process emotional information and 
use it to navigate the social environment. 
2.trait model focuses on behavioral dispositions and self perceived abilities and is measured through self report. 
3.The finan model is the mixed model is a combination of both ability and trait EI. 
It defines EI as an array of skills and characteristics that drive leadership performance
A factor that affects our EI is Mental Health.
Mental Health:
Mental health (or behavioral health) is a level of psychological well-being, or
an absence of a mental disorder. it is the "psychological state of someone who
is functioning at a satisfactory level of emotional and behavioral adjustment.
There are many assumptions about emotional intelligence and age.
some parts of emotional intelligence (EQ) do
increase with age, though the effect is slight; in addition there are elements of EQ that do not
increase with age indicating some competencies must be developed through training.

Calculation:
There are three Categories of the EQ
1.Above avarage
2.below avarage
3.avarage</string>
    <string name="title_activity_answers_list">AnswersListActivity</string>
    <string name="title_activity_activity_iqlist">Activity_iqlist</string>
    <string name="title_activity_iqlist">Iqlist</string>
    
    
    <string name="bdate">Enter Your Birth Date</string>
    <string name="day">Day:</string>
    <string name="month">Month:</string>
   <string name="year">Year:</string>
   <string name="start">Start Quiz!!</string> 
    

</resources>
