
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.eqiqcalculator.MainActivity$PlaceholderFragment" 
     android:id="@+id/container" 
     android:background="@color/bgcolor">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="37dp"
        android:layout_marginTop="30dp"
        android:text="@string/user_name"
        android:textAppearance="?android:attr/textAppearanceLarge" 
        android:textColor="@color/txtcolor"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView1"
        android:layout_below="@+id/editText1"
        android:layout_marginTop="31dp"
        android:text="@string/password"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/txtcolor" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:text="@string/signup" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/editText1"
        android:layout_below="@+id/textView3"
        android:ems="10"
        android:hint="@string/pwd"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_below="@+id/textView1"
        android:ems="10"
        android:hint="@string/u_name"
        android:inputType="textPersonName"
         />

    <Button
        android:id="@+id/button3"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button2"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/textView3"
        android:text="@string/exit" />

    <Button
        android:id="@+id/button1"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText2"
        android:layout_marginTop="34dp"
        android:layout_toLeftOf="@+id/button3"
        android:text="@string/login" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView1"
        android:layout_alignLeft="@+id/button1"
        android:src="@drawable/ic_launcher" 
        android:contentDescription="image"/>

</RelativeLayout>
    
    
